...
    <string name="title_netbank">Net Bank</string>
    <string name="placeholder_security_code" translatable="false">CVV</string>
    <string name="hint_expiration_date" translatable="false">MM/YY</string>

    <string name="cvv_tooltip_3_digits">3 digit number on the\nback of your card</string>
    <string name="cvv_tooltip_4_digits">4 digit number on the\nfront of your card</string>
    <string name="payment_chooser_title">Payment Methods</string>

    <string name="mobile_banking_chooser_title">Mobile Banking</string>
    <string name="installments_title">Installments</string>
    <string name="installments_amount_lower_than_monthly_limit">Amount is lower than the monthly minimum payment amount</string>
    <string name="econtext_title">econtext</string>
    <string name="menu_title_close">Close</string>

    <string name="payment_method_credit_card_title">Credit Card</string>

    <string name="payment_method_mobile_banking_title">Mobile Banking</string>
    <string name="payment_method_alipay_title">Alipay Online</string>
    <string name="payment_method_tesco_lotus_title">Lotus\'s Bill Payment</string>
    <string name="payment_method_installments_title">Installments</string>
    <string name="payment_method_convenience_store_title">Convenience Store</string>
    <string name="payment_method_pay_easy_title">Pay-easy</string>
    <string name="payment_method_netbank_title">Net Bank</string>

    <string name="payment_method_installment_bbl_title">Bangkok Bank</string>
    <string name="payment_method_installment_mbb_title">Maybank</string>
    <string name="payment_method_installment_kasikorn_title">Kasikorn</string>
    <string name="payment_method_installment_bay_title">Krungsri</string>
    <string name="payment_method_installment_first_choice_title">Krungsri First Choice</string>
    <string name="payment_method_installment_ktc_title">KTC</string>
    <string name="payment_method_installment_scb_title">Siam Commercial Bank</string>
    <string name="payment_method_installment_ttb_title">TMBThanachart Bank</string>
    <string name="payment_method_installment_uob_title">United Overseas Bank</string>
    <string name="payment_method_installment_term_month_title">%d month</string>
    <string name="payment_method_installment_term_months_title">%d months</string>

    <string name="payment_method_mobile_banking_bay_title">KMA</string>
    <string name="payment_method_mobile_banking_bbl_title">Bualuang mBanking</string>
    <string name="payment_method_mobile_banking_scb_title">SCB EASY</string>
    <string name="payment_method_mobile_banking_kbank_title">K PLUS</string>
    <string name="payment_method_mobile_banking_ktb_title">Krungthai NEXT</string>
    <string name="payment_method_ocbc_digital_title">OCBC Digital</string>


    <string name="payment_method_promptpay_title">PromptPay</string>
    <string name="payment_method_paynow_title">PayNow</string>
    <string name="payment_truemoney_title">TrueMoney</string>
    <string name="truemoney_info_text">Please input the mobile number connected to your TrueMoney Wallet account</string>
    <string name="payment_method_fpx_title">FPX</string>
    <string name="fpx_info_text">(Optional) Please input your email to receive transaction confirmation from FPX</string>
    <string name="atome_info_text">Please input below information to complete the charge creation with Atome</string>
    <string name="empty_text">No data available</string>
    <string name="banks_no_data">Cannot retrieve list of banks. Please try again later.</string>
    <string name="payment_method_alipayplus_footnote">(Alipay+™ Partner)</string>
    <string name="payment_method_alipay_cn_title">Alipay</string>
    <string name="payment_method_alipay_hk_title">AlipayHK</string>
    <string name="payment_method_dana_title">DANA</string>
    <string name="payment_method_gcash_title">GCash</string>
    <string name="payment_method_kakaopay_title">Kakao Pay</string>
    <string name="payment_method_touch_n_go_title">Touch ’n Go</string>
    <string name="googlepay">Google Pay</string>
    <string name="pay_with_googlepay_button_content_description" translatable="false">Pay With Google Pay</string>
    <string name="payment_method_rabbit_linepay_title" translatable="false">LINE Pay</string>
    <string name="payment_method_boots_title" translatable="false">Boost</string>
    <string name="payment_method_shopeepay_title" translatable="false">ShopeePay</string>
    <string name="payment_method_maybank_qr_title" translatable="false">Maybank QRPay</string>
    <string name="payment_method_duitnow_qr_title" translatable="false">DuitNow QR</string>
    <string name="payment_method_duitnow_obw_title" translatable="false">DuitNow Online Banking/Wallets</string>
    <string name="payment_method_grabpay_title" translatable="false">Grab</string>
    <string name="payment_method_grabpay_rms_title" translatable="false">GrabPay</string>
    <string name="payment_method_grabpay_footnote" translatable="false">(GrabPay and PayLater)</string>
    <string name="payment_method_paypay_title" translatable="false">PayPay</string>
    <string name="payment_method_atome_title">Atome</string>
    <string name="payment_method_wechat_pay_title">WeChat Pay</string>
    <string name="label_name">Name (optional)</string>
    <string name="label_email_optional">Email (optional)</string>
    <string name="label_shipping">Shipping address</string>
    <string name="label_billing">Billing address (optional)</string>
    <string name="label_street">Street</string>
    <string name="label_postal">Postal code</string>
...
