<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/close_menu"
        android:icon="@drawable/ic_close"
        android:title="@string/menu_title_close"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="always" />
</menu>
