...
            android:textSize="14sp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/windowBackground"
        tools:listitem="@layout/list_item"
        android:layout_below="@id/message_layout"/>

...
